versions/0.9.0/_sources/refs/_aws-cdk_aws-glue.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"ba9MGn4HpmvmnXKtUg4Aon8/UVd/yUNA8cOFCcOMOho="}

@aws-cdk/aws-glue
=================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Glue/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Glue" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Glue --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Glue" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/glue/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:glue:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="glue" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>glue</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:glue:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='glue', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-glue/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-glue@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-glue": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-glue@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-glue/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-glue@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-glue": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-glue@0.9.0



.. mdinclude:: ./__aws-cdk_aws-glue.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-glue

ClassifierName
^^^^^^^^^^^^^^

.. py:class:: ClassifierName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.ClassifierName;

      .. code-tab:: javascript

         const { ClassifierName } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { ClassifierName } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ConnectionName
^^^^^^^^^^^^^^

.. py:class:: ConnectionName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.ConnectionName;

      .. code-tab:: javascript

         const { ConnectionName } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { ConnectionName } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CrawlerName
^^^^^^^^^^^

.. py:class:: CrawlerName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.CrawlerName;

      .. code-tab:: javascript

         const { CrawlerName } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { CrawlerName } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

DatabaseName
^^^^^^^^^^^^

.. py:class:: DatabaseName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.DatabaseName;

      .. code-tab:: javascript

         const { DatabaseName } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { DatabaseName } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

DevEndpointId
^^^^^^^^^^^^^

.. py:class:: DevEndpointId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.DevEndpointId;

      .. code-tab:: javascript

         const { DevEndpointId } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { DevEndpointId } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

JobName
^^^^^^^

.. py:class:: JobName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.JobName;

      .. code-tab:: javascript

         const { JobName } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { JobName } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PartitionId
^^^^^^^^^^^

.. py:class:: PartitionId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.PartitionId;

      .. code-tab:: javascript

         const { PartitionId } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { PartitionId } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TableName
^^^^^^^^^

.. py:class:: TableName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.TableName;

      .. code-tab:: javascript

         const { TableName } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { TableName } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TriggerName
^^^^^^^^^^^

.. py:class:: TriggerName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.TriggerName;

      .. code-tab:: javascript

         const { TriggerName } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { TriggerName } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-glue.cloudformation

ClassifierResource
~~~~~~~~~~~~~~~~~~

.. py:class:: ClassifierResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.ClassifierResource;

      .. code-tab:: javascript

         const { cloudformation.ClassifierResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.ClassifierResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClassifierResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClassifierResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.ClassifierResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.ClassifierName` *(readonly)*

   .. py:class:: GrokClassifierProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.ClassifierResource.GrokClassifierProperty;

         .. code-tab:: javascript

            // cloudformation.ClassifierResource.GrokClassifierProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ClassifierResource.GrokClassifierProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: classification

         ``ClassifierResource.GrokClassifierProperty.Classification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-classification


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: grokPattern

         ``ClassifierResource.GrokClassifierProperty.GrokPattern``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-grokpattern


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: customPatterns

         ``ClassifierResource.GrokClassifierProperty.CustomPatterns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-custompatterns


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: name

         ``ClassifierResource.GrokClassifierProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: JsonClassifierProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.ClassifierResource.JsonClassifierProperty;

         .. code-tab:: javascript

            // cloudformation.ClassifierResource.JsonClassifierProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ClassifierResource.JsonClassifierProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: jsonPath

         ``ClassifierResource.JsonClassifierProperty.JsonPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-jsonclassifier.html#cfn-glue-classifier-jsonclassifier-jsonpath


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: name

         ``ClassifierResource.JsonClassifierProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-jsonclassifier.html#cfn-glue-classifier-jsonclassifier-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: XMLClassifierProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.ClassifierResource.XMLClassifierProperty;

         .. code-tab:: javascript

            // cloudformation.ClassifierResource.XMLClassifierProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ClassifierResource.XMLClassifierProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: classification

         ``ClassifierResource.XMLClassifierProperty.Classification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-xmlclassifier.html#cfn-glue-classifier-xmlclassifier-classification


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: rowTag

         ``ClassifierResource.XMLClassifierProperty.RowTag``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-xmlclassifier.html#cfn-glue-classifier-xmlclassifier-rowtag


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: name

         ``ClassifierResource.XMLClassifierProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-xmlclassifier.html#cfn-glue-classifier-xmlclassifier-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ClassifierResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClassifierResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.ClassifierResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClassifierResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClassifierResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: grokClassifier

      ``AWS::Glue::Classifier.GrokClassifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-classifier.html#cfn-glue-classifier-grokclassifier


      :type: :py:class:`~@aws-cdk/aws-glue.cloudformation.ClassifierResource.GrokClassifierProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: jsonClassifier

      ``AWS::Glue::Classifier.JsonClassifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-classifier.html#cfn-glue-classifier-jsonclassifier


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.ClassifierResource.JsonClassifierProperty` or undefined


   .. py:attribute:: xmlClassifier

      ``AWS::Glue::Classifier.XMLClassifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-classifier.html#cfn-glue-classifier-xmlclassifier


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.ClassifierResource.XMLClassifierProperty` or undefined


ConnectionResource
~~~~~~~~~~~~~~~~~~

.. py:class:: ConnectionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.ConnectionResource;

      .. code-tab:: javascript

         const { cloudformation.ConnectionResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.ConnectionResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConnectionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConnectionResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.ConnectionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.ConnectionName` *(readonly)*

   .. py:class:: ConnectionInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.ConnectionResource.ConnectionInputProperty;

         .. code-tab:: javascript

            // cloudformation.ConnectionResource.ConnectionInputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConnectionResource.ConnectionInputProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: connectionProperties

         ``ConnectionResource.ConnectionInputProperty.ConnectionProperties``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-connectionproperties


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: connectionType

         ``ConnectionResource.ConnectionInputProperty.ConnectionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-connectiontype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: description

         ``ConnectionResource.ConnectionInputProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-description


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: matchCriteria

         ``ConnectionResource.ConnectionInputProperty.MatchCriteria``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-matchcriteria


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: name

         ``ConnectionResource.ConnectionInputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: physicalConnectionRequirements

         ``ConnectionResource.ConnectionInputProperty.PhysicalConnectionRequirements``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-physicalconnectionrequirements


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.ConnectionResource.PhysicalConnectionRequirementsProperty` or undefined


   .. py:class:: PhysicalConnectionRequirementsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.ConnectionResource.PhysicalConnectionRequirementsProperty;

         .. code-tab:: javascript

            // cloudformation.ConnectionResource.PhysicalConnectionRequirementsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConnectionResource.PhysicalConnectionRequirementsProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: availabilityZone

         ``ConnectionResource.PhysicalConnectionRequirementsProperty.AvailabilityZone``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-physicalconnectionrequirements.html#cfn-glue-connection-physicalconnectionrequirements-availabilityzone


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: securityGroupIdList

         ``ConnectionResource.PhysicalConnectionRequirementsProperty.SecurityGroupIdList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-physicalconnectionrequirements.html#cfn-glue-connection-physicalconnectionrequirements-securitygroupidlist


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: subnetId

         ``ConnectionResource.PhysicalConnectionRequirementsProperty.SubnetId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-physicalconnectionrequirements.html#cfn-glue-connection-physicalconnectionrequirements-subnetid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ConnectionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConnectionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.ConnectionResourceProps;

      .. code-tab:: javascript

         // cloudformation.ConnectionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ConnectionResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: catalogId

      ``AWS::Glue::Connection.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-connection.html#cfn-glue-connection-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: connectionInput

      ``AWS::Glue::Connection.ConnectionInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-connection.html#cfn-glue-connection-connectioninput


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.ConnectionResource.ConnectionInputProperty`


CrawlerResource
~~~~~~~~~~~~~~~

.. py:class:: CrawlerResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.CrawlerResource;

      .. code-tab:: javascript

         const { cloudformation.CrawlerResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.CrawlerResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CrawlerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CrawlerResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.CrawlerName` *(readonly)*

   .. py:class:: JdbcTargetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.CrawlerResource.JdbcTargetProperty;

         .. code-tab:: javascript

            // cloudformation.CrawlerResource.JdbcTargetProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CrawlerResource.JdbcTargetProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: connectionName

         ``CrawlerResource.JdbcTargetProperty.ConnectionName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-jdbctarget.html#cfn-glue-crawler-jdbctarget-connectionname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: exclusions

         ``CrawlerResource.JdbcTargetProperty.Exclusions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-jdbctarget.html#cfn-glue-crawler-jdbctarget-exclusions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: path

         ``CrawlerResource.JdbcTargetProperty.Path``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-jdbctarget.html#cfn-glue-crawler-jdbctarget-path


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: S3TargetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.CrawlerResource.S3TargetProperty;

         .. code-tab:: javascript

            // cloudformation.CrawlerResource.S3TargetProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CrawlerResource.S3TargetProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: exclusions

         ``CrawlerResource.S3TargetProperty.Exclusions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-s3target.html#cfn-glue-crawler-s3target-exclusions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: path

         ``CrawlerResource.S3TargetProperty.Path``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-s3target.html#cfn-glue-crawler-s3target-path


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ScheduleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.CrawlerResource.ScheduleProperty;

         .. code-tab:: javascript

            // cloudformation.CrawlerResource.ScheduleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CrawlerResource.ScheduleProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: scheduleExpression

         ``CrawlerResource.ScheduleProperty.ScheduleExpression``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-schedule.html#cfn-glue-crawler-schedule-scheduleexpression


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: SchemaChangePolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.CrawlerResource.SchemaChangePolicyProperty;

         .. code-tab:: javascript

            // cloudformation.CrawlerResource.SchemaChangePolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CrawlerResource.SchemaChangePolicyProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: deleteBehavior

         ``CrawlerResource.SchemaChangePolicyProperty.DeleteBehavior``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-schemachangepolicy.html#cfn-glue-crawler-schemachangepolicy-deletebehavior


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: updateBehavior

         ``CrawlerResource.SchemaChangePolicyProperty.UpdateBehavior``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-schemachangepolicy.html#cfn-glue-crawler-schemachangepolicy-updatebehavior


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TargetsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.CrawlerResource.TargetsProperty;

         .. code-tab:: javascript

            // cloudformation.CrawlerResource.TargetsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CrawlerResource.TargetsProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: jdbcTargets

         ``CrawlerResource.TargetsProperty.JdbcTargets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-targets.html#cfn-glue-crawler-targets-jdbctargets


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.JdbcTargetProperty`)[] or undefined


      .. py:attribute:: s3Targets

         ``CrawlerResource.TargetsProperty.S3Targets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-targets.html#cfn-glue-crawler-targets-s3targets


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.S3TargetProperty`)[] or undefined



CrawlerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CrawlerResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.CrawlerResourceProps;

      .. code-tab:: javascript

         // cloudformation.CrawlerResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CrawlerResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: databaseName

      ``AWS::Glue::Crawler.DatabaseName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-databasename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: role

      ``AWS::Glue::Crawler.Role``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-role


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: targets

      ``AWS::Glue::Crawler.Targets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-targets


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.TargetsProperty`


   .. py:attribute:: classifiers

      ``AWS::Glue::Crawler.Classifiers``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-classifiers


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: configuration

      ``AWS::Glue::Crawler.Configuration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-configuration


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: crawlerName

      ``AWS::Glue::Crawler.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::Glue::Crawler.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: schedule

      ``AWS::Glue::Crawler.Schedule``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-schedule


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.ScheduleProperty` or undefined


   .. py:attribute:: schemaChangePolicy

      ``AWS::Glue::Crawler.SchemaChangePolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-schemachangepolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.SchemaChangePolicyProperty` or undefined


   .. py:attribute:: tablePrefix

      ``AWS::Glue::Crawler.TablePrefix``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-tableprefix


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


DatabaseResource
~~~~~~~~~~~~~~~~

.. py:class:: DatabaseResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.DatabaseResource;

      .. code-tab:: javascript

         const { cloudformation.DatabaseResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.DatabaseResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DatabaseResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DatabaseResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.DatabaseResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.DatabaseName` *(readonly)*

   .. py:class:: DatabaseInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.DatabaseResource.DatabaseInputProperty;

         .. code-tab:: javascript

            // cloudformation.DatabaseResource.DatabaseInputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DatabaseResource.DatabaseInputProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: description

         ``DatabaseResource.DatabaseInputProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-description


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: locationUri

         ``DatabaseResource.DatabaseInputProperty.LocationUri``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-locationuri


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: name

         ``DatabaseResource.DatabaseInputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: parameters

         ``DatabaseResource.DatabaseInputProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-parameters


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



DatabaseResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DatabaseResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.DatabaseResourceProps;

      .. code-tab:: javascript

         // cloudformation.DatabaseResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DatabaseResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: catalogId

      ``AWS::Glue::Database.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-database.html#cfn-glue-database-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: databaseInput

      ``AWS::Glue::Database.DatabaseInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-database.html#cfn-glue-database-databaseinput


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.DatabaseResource.DatabaseInputProperty`


DevEndpointResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: DevEndpointResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.DevEndpointResource;

      .. code-tab:: javascript

         const { cloudformation.DevEndpointResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.DevEndpointResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DevEndpointResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DevEndpointResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.DevEndpointResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.DevEndpointId` *(readonly)*


DevEndpointResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DevEndpointResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.DevEndpointResourceProps;

      .. code-tab:: javascript

         // cloudformation.DevEndpointResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DevEndpointResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: publicKey

      ``AWS::Glue::DevEndpoint.PublicKey``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-publickey


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: roleArn

      ``AWS::Glue::DevEndpoint.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: endpointName

      ``AWS::Glue::DevEndpoint.EndpointName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-endpointname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: extraJarsS3Path

      ``AWS::Glue::DevEndpoint.ExtraJarsS3Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-extrajarss3path


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: extraPythonLibsS3Path

      ``AWS::Glue::DevEndpoint.ExtraPythonLibsS3Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-extrapythonlibss3path


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: numberOfNodes

      ``AWS::Glue::DevEndpoint.NumberOfNodes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-numberofnodes


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: securityGroupIds

      ``AWS::Glue::DevEndpoint.SecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-securitygroupids


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: subnetId

      ``AWS::Glue::DevEndpoint.SubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-subnetid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


JobResource
~~~~~~~~~~~

.. py:class:: JobResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.JobResource;

      .. code-tab:: javascript

         const { cloudformation.JobResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.JobResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``JobResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``JobResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.JobName` *(readonly)*

   .. py:class:: ConnectionsListProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.JobResource.ConnectionsListProperty;

         .. code-tab:: javascript

            // cloudformation.JobResource.ConnectionsListProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobResource.ConnectionsListProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: connections

         ``JobResource.ConnectionsListProperty.Connections``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-connectionslist.html#cfn-glue-job-connectionslist-connections


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:class:: ExecutionPropertyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.JobResource.ExecutionPropertyProperty;

         .. code-tab:: javascript

            // cloudformation.JobResource.ExecutionPropertyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobResource.ExecutionPropertyProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: maxConcurrentRuns

         ``JobResource.ExecutionPropertyProperty.MaxConcurrentRuns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-executionproperty.html#cfn-glue-job-executionproperty-maxconcurrentruns


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: JobCommandProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.JobResource.JobCommandProperty;

         .. code-tab:: javascript

            // cloudformation.JobResource.JobCommandProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobResource.JobCommandProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: name

         ``JobResource.JobCommandProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-jobcommand.html#cfn-glue-job-jobcommand-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: scriptLocation

         ``JobResource.JobCommandProperty.ScriptLocation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-jobcommand.html#cfn-glue-job-jobcommand-scriptlocation


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



JobResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: JobResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.JobResourceProps;

      .. code-tab:: javascript

         // cloudformation.JobResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.JobResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: command

      ``AWS::Glue::Job.Command``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-command


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResource.JobCommandProperty`


   .. py:attribute:: role

      ``AWS::Glue::Job.Role``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-role


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: allocatedCapacity

      ``AWS::Glue::Job.AllocatedCapacity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-allocatedcapacity


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: connections

      ``AWS::Glue::Job.Connections``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-connections


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResource.ConnectionsListProperty` or undefined


   .. py:attribute:: defaultArguments

      ``AWS::Glue::Job.DefaultArguments``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-defaultarguments


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::Glue::Job.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: executionProperty

      ``AWS::Glue::Job.ExecutionProperty``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-executionproperty


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResource.ExecutionPropertyProperty` or undefined


   .. py:attribute:: jobName

      ``AWS::Glue::Job.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: logUri

      ``AWS::Glue::Job.LogUri``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-loguri


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: maxRetries

      ``AWS::Glue::Job.MaxRetries``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-maxretries


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


PartitionResource
~~~~~~~~~~~~~~~~~

.. py:class:: PartitionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.PartitionResource;

      .. code-tab:: javascript

         const { cloudformation.PartitionResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.PartitionResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PartitionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PartitionResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.PartitionId` *(readonly)*

   .. py:class:: ColumnProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.PartitionResource.ColumnProperty;

         .. code-tab:: javascript

            // cloudformation.PartitionResource.ColumnProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PartitionResource.ColumnProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: name

         ``PartitionResource.ColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-column.html#cfn-glue-partition-column-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: comment

         ``PartitionResource.ColumnProperty.Comment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-column.html#cfn-glue-partition-column-comment


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: type

         ``PartitionResource.ColumnProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-column.html#cfn-glue-partition-column-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: OrderProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.PartitionResource.OrderProperty;

         .. code-tab:: javascript

            // cloudformation.PartitionResource.OrderProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PartitionResource.OrderProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: column

         ``PartitionResource.OrderProperty.Column``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-order.html#cfn-glue-partition-order-column


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: sortOrder

         ``PartitionResource.OrderProperty.SortOrder``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-order.html#cfn-glue-partition-order-sortorder


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: PartitionInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.PartitionResource.PartitionInputProperty;

         .. code-tab:: javascript

            // cloudformation.PartitionResource.PartitionInputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PartitionResource.PartitionInputProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: values

         ``PartitionResource.PartitionInputProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-partitioninput.html#cfn-glue-partition-partitioninput-values


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


      .. py:attribute:: parameters

         ``PartitionResource.PartitionInputProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-partitioninput.html#cfn-glue-partition-partitioninput-parameters


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: storageDescriptor

         ``PartitionResource.PartitionInputProperty.StorageDescriptor``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-partitioninput.html#cfn-glue-partition-partitioninput-storagedescriptor


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.StorageDescriptorProperty` or undefined


   .. py:class:: SerdeInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.PartitionResource.SerdeInfoProperty;

         .. code-tab:: javascript

            // cloudformation.PartitionResource.SerdeInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PartitionResource.SerdeInfoProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: name

         ``PartitionResource.SerdeInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-serdeinfo.html#cfn-glue-partition-serdeinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: parameters

         ``PartitionResource.SerdeInfoProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-serdeinfo.html#cfn-glue-partition-serdeinfo-parameters


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: serializationLibrary

         ``PartitionResource.SerdeInfoProperty.SerializationLibrary``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-serdeinfo.html#cfn-glue-partition-serdeinfo-serializationlibrary


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: SkewedInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.PartitionResource.SkewedInfoProperty;

         .. code-tab:: javascript

            // cloudformation.PartitionResource.SkewedInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PartitionResource.SkewedInfoProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: skewedColumnNames

         ``PartitionResource.SkewedInfoProperty.SkewedColumnNames``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-skewedinfo.html#cfn-glue-partition-skewedinfo-skewedcolumnnames


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: skewedColumnValueLocationMaps

         ``PartitionResource.SkewedInfoProperty.SkewedColumnValueLocationMaps``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-skewedinfo.html#cfn-glue-partition-skewedinfo-skewedcolumnvaluelocationmaps


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: skewedColumnValues

         ``PartitionResource.SkewedInfoProperty.SkewedColumnValues``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-skewedinfo.html#cfn-glue-partition-skewedinfo-skewedcolumnvalues


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:class:: StorageDescriptorProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.PartitionResource.StorageDescriptorProperty;

         .. code-tab:: javascript

            // cloudformation.PartitionResource.StorageDescriptorProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PartitionResource.StorageDescriptorProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: bucketColumns

         ``PartitionResource.StorageDescriptorProperty.BucketColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-bucketcolumns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: columns

         ``PartitionResource.StorageDescriptorProperty.Columns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-columns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.ColumnProperty`)[] or undefined


      .. py:attribute:: compressed

         ``PartitionResource.StorageDescriptorProperty.Compressed``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-compressed


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: inputFormat

         ``PartitionResource.StorageDescriptorProperty.InputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-inputformat


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: location

         ``PartitionResource.StorageDescriptorProperty.Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-location


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: numberOfBuckets

         ``PartitionResource.StorageDescriptorProperty.NumberOfBuckets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-numberofbuckets


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: outputFormat

         ``PartitionResource.StorageDescriptorProperty.OutputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-outputformat


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: parameters

         ``PartitionResource.StorageDescriptorProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-parameters


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: serdeInfo

         ``PartitionResource.StorageDescriptorProperty.SerdeInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-serdeinfo


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.SerdeInfoProperty` or undefined


      .. py:attribute:: skewedInfo

         ``PartitionResource.StorageDescriptorProperty.SkewedInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-skewedinfo


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.SkewedInfoProperty` or undefined


      .. py:attribute:: sortColumns

         ``PartitionResource.StorageDescriptorProperty.SortColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-sortcolumns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.OrderProperty`)[] or undefined


      .. py:attribute:: storedAsSubDirectories

         ``PartitionResource.StorageDescriptorProperty.StoredAsSubDirectories``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-storedassubdirectories


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



PartitionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PartitionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.PartitionResourceProps;

      .. code-tab:: javascript

         // cloudformation.PartitionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PartitionResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: catalogId

      ``AWS::Glue::Partition.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: databaseName

      ``AWS::Glue::Partition.DatabaseName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-databasename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: partitionInput

      ``AWS::Glue::Partition.PartitionInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-partitioninput


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.PartitionInputProperty`


   .. py:attribute:: tableName

      ``AWS::Glue::Partition.TableName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-tablename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


TableResource
~~~~~~~~~~~~~

.. py:class:: TableResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.TableResource;

      .. code-tab:: javascript

         const { cloudformation.TableResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.TableResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TableResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TableResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.TableName` *(readonly)*

   .. py:class:: ColumnProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TableResource.ColumnProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.ColumnProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.ColumnProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: name

         ``TableResource.ColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-column.html#cfn-glue-table-column-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: comment

         ``TableResource.ColumnProperty.Comment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-column.html#cfn-glue-table-column-comment


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: type

         ``TableResource.ColumnProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-column.html#cfn-glue-table-column-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: OrderProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TableResource.OrderProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.OrderProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.OrderProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: column

         ``TableResource.OrderProperty.Column``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-order.html#cfn-glue-table-order-column


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: sortOrder

         ``TableResource.OrderProperty.SortOrder``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-order.html#cfn-glue-table-order-sortorder


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: SerdeInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TableResource.SerdeInfoProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.SerdeInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.SerdeInfoProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: name

         ``TableResource.SerdeInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-serdeinfo.html#cfn-glue-table-serdeinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: parameters

         ``TableResource.SerdeInfoProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-serdeinfo.html#cfn-glue-table-serdeinfo-parameters


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: serializationLibrary

         ``TableResource.SerdeInfoProperty.SerializationLibrary``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-serdeinfo.html#cfn-glue-table-serdeinfo-serializationlibrary


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: SkewedInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TableResource.SkewedInfoProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.SkewedInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.SkewedInfoProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: skewedColumnNames

         ``TableResource.SkewedInfoProperty.SkewedColumnNames``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-skewedinfo.html#cfn-glue-table-skewedinfo-skewedcolumnnames


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: skewedColumnValueLocationMaps

         ``TableResource.SkewedInfoProperty.SkewedColumnValueLocationMaps``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-skewedinfo.html#cfn-glue-table-skewedinfo-skewedcolumnvaluelocationmaps


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: skewedColumnValues

         ``TableResource.SkewedInfoProperty.SkewedColumnValues``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-skewedinfo.html#cfn-glue-table-skewedinfo-skewedcolumnvalues


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:class:: StorageDescriptorProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TableResource.StorageDescriptorProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.StorageDescriptorProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.StorageDescriptorProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: bucketColumns

         ``TableResource.StorageDescriptorProperty.BucketColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-bucketcolumns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: columns

         ``TableResource.StorageDescriptorProperty.Columns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-columns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.ColumnProperty`)[] or undefined


      .. py:attribute:: compressed

         ``TableResource.StorageDescriptorProperty.Compressed``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-compressed


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: inputFormat

         ``TableResource.StorageDescriptorProperty.InputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-inputformat


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: location

         ``TableResource.StorageDescriptorProperty.Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-location


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: numberOfBuckets

         ``TableResource.StorageDescriptorProperty.NumberOfBuckets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-numberofbuckets


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: outputFormat

         ``TableResource.StorageDescriptorProperty.OutputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-outputformat


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: parameters

         ``TableResource.StorageDescriptorProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-parameters


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: serdeInfo

         ``TableResource.StorageDescriptorProperty.SerdeInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-serdeinfo


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.SerdeInfoProperty` or undefined


      .. py:attribute:: skewedInfo

         ``TableResource.StorageDescriptorProperty.SkewedInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-skewedinfo


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.SkewedInfoProperty` or undefined


      .. py:attribute:: sortColumns

         ``TableResource.StorageDescriptorProperty.SortColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-sortcolumns


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.OrderProperty`)[] or undefined


      .. py:attribute:: storedAsSubDirectories

         ``TableResource.StorageDescriptorProperty.StoredAsSubDirectories``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-storedassubdirectories


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TableInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TableResource.TableInputProperty;

         .. code-tab:: javascript

            // cloudformation.TableResource.TableInputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TableResource.TableInputProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: description

         ``TableResource.TableInputProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-description


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: name

         ``TableResource.TableInputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: owner

         ``TableResource.TableInputProperty.Owner``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-owner


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: parameters

         ``TableResource.TableInputProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-parameters


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: partitionKeys

         ``TableResource.TableInputProperty.PartitionKeys``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-partitionkeys


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.ColumnProperty`)[] or undefined


      .. py:attribute:: retention

         ``TableResource.TableInputProperty.Retention``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-retention


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: storageDescriptor

         ``TableResource.TableInputProperty.StorageDescriptor``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-storagedescriptor


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.StorageDescriptorProperty` or undefined


      .. py:attribute:: tableType

         ``TableResource.TableInputProperty.TableType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-tabletype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: viewExpandedText

         ``TableResource.TableInputProperty.ViewExpandedText``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-viewexpandedtext


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: viewOriginalText

         ``TableResource.TableInputProperty.ViewOriginalText``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-vieworiginaltext


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



TableResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TableResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.TableResourceProps;

      .. code-tab:: javascript

         // cloudformation.TableResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TableResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: catalogId

      ``AWS::Glue::Table.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-table.html#cfn-glue-table-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: databaseName

      ``AWS::Glue::Table.DatabaseName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-table.html#cfn-glue-table-databasename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: tableInput

      ``AWS::Glue::Table.TableInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-table.html#cfn-glue-table-tableinput


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.TableInputProperty`


TriggerResource
~~~~~~~~~~~~~~~

.. py:class:: TriggerResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.TriggerResource;

      .. code-tab:: javascript

         const { cloudformation.TriggerResource } = require('@aws-cdk/aws-glue');

      .. code-tab:: typescript

         import { cloudformation.TriggerResource } from '@aws-cdk/aws-glue';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TriggerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TriggerResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-glue.TriggerName` *(readonly)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TriggerResource.ActionProperty;

         .. code-tab:: javascript

            // cloudformation.TriggerResource.ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TriggerResource.ActionProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: arguments

         ``TriggerResource.ActionProperty.Arguments``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-action.html#cfn-glue-trigger-action-arguments


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: jobName

         ``TriggerResource.ActionProperty.JobName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-action.html#cfn-glue-trigger-action-jobname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ConditionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TriggerResource.ConditionProperty;

         .. code-tab:: javascript

            // cloudformation.TriggerResource.ConditionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TriggerResource.ConditionProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: jobName

         ``TriggerResource.ConditionProperty.JobName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-condition.html#cfn-glue-trigger-condition-jobname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: logicalOperator

         ``TriggerResource.ConditionProperty.LogicalOperator``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-condition.html#cfn-glue-trigger-condition-logicaloperator


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: state

         ``TriggerResource.ConditionProperty.State``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-condition.html#cfn-glue-trigger-condition-state


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: PredicateProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Glue;

         .. code-tab:: java

            import software.amazon.awscdk.services.glue.cloudformation.TriggerResource.PredicateProperty;

         .. code-tab:: javascript

            // cloudformation.TriggerResource.PredicateProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TriggerResource.PredicateProperty } from '@aws-cdk/aws-glue';





      .. py:attribute:: conditions

         ``TriggerResource.PredicateProperty.Conditions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-predicate.html#cfn-glue-trigger-predicate-conditions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResource.ConditionProperty`)[] or undefined


      .. py:attribute:: logical

         ``TriggerResource.PredicateProperty.Logical``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-predicate.html#cfn-glue-trigger-predicate-logical


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



TriggerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TriggerResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Glue;

      .. code-tab:: java

         import software.amazon.awscdk.services.glue.cloudformation.TriggerResourceProps;

      .. code-tab:: javascript

         // cloudformation.TriggerResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TriggerResourceProps } from '@aws-cdk/aws-glue';





   .. py:attribute:: actions

      ``AWS::Glue::Trigger.Actions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-actions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResource.ActionProperty`)[]


   .. py:attribute:: type

      ``AWS::Glue::Trigger.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-type


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: description

      ``AWS::Glue::Trigger.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: predicate

      ``AWS::Glue::Trigger.Predicate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-predicate


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResource.PredicateProperty` or undefined


   .. py:attribute:: schedule

      ``AWS::Glue::Trigger.Schedule``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-schedule


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: triggerName

      ``AWS::Glue::Trigger.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-glue

